# comgraph

./: .gitignore  README.md  background.cpp  backtwo.cpp
c++/p1/: CMakeLists.txt  api.cpp  api.hpp  cli.hpp  cli_parser.cpp  main.cpp  math_operators.hpp  rt3.hpp  xml.hpp  xml_parser.cpp
c++/p1/rapidxml/: rapidxml_print.hpp
rust/: Cargo.toml  gradient.ppm  interpolation.ppm
rust/src/: file_saver.rs  first_task.rs  main.rs  second_task.rs  types.rs  utils.rs
